client/src/style/EditingApp.css
@import url('./Button.css');

html, body {
    width: 100%;
    height: 100%;
    margin: 0;
}

.EA {
    width: 100%;
    height: 100%;
    display: flex;
    flex-flow: column;
}

.EA-head {
    flex: 0 1 auto;
    background-color: #222;
    width: 100%;
    position: relative;
}

.EA-head-logo {
    width: 120px;
    float: left;
    overflow: auto;
}

.EA-head-logo-image {
    height: 40px;
    margin-top: 6px;
    float: left;
}

.EA-head-logo-text {
    margin-left: 5px;
    color: white;
}

.EA-head-title {
    text-align: center;
    color: white;
    overflow: hidden;
}

.EA-head-state {
    margin-top: 5px;
    width: 120px;
    float: right;
}

.EA-head-state-text {
    color: white;
    margin-top: 12px;
    font-size: 15px;
}

.EA-orb {
    width: 8px;
    height: 8px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    float: left;
    margin: 20px 6px;
    animation-duration: 3s;
    animation-iteration-count: infinite;
}

.EA-orb-ok {
    background-color: rgb(0, 170, 0);
    box-shadow: 0 0 4px rgb(0, 170, 0);
    animation-name: orb-ok-pulse;
}

.EA-orb-warning {
    background-color: orange;
    box-shadow: 0 0 4px orange;
    animation-name: orb-warning-pulse;
}

.EA-orb-error {
    background-color: red;
    box-shadow: 0 0 4px red;
    animation-name: orb-error-pulse;
}

@keyframes orb-ok-pulse {
    0% {
        box-shadow: 0 0 4px green;
    }
    50% {
        box-shadow: 0 0 6px green;
    }
    100% {
        box-shadow: 0 0 4px green;
    }
}
@keyframes orb-warning-pulse {
    0% {
        box-shadow: 0 0 4px orange;
    }
    50% {
        box-shadow: 0 0 6px orange;
    }
    100% {
        box-shadow: 0 0 4px orange;
    }
}
@keyframes orb-error-pulse {
    0% {
        box-shadow: 0 0 4px red;
    }
    50% {
        box-shadow: 0 0 6px red;
    }
    100% {
        box-shadow: 0 0 4px red;
    }
}

.EA-body {
    flex: 1 1 auto;
    clear: both;
    position: relative;
    background-color: #e6e6e6;

    display: flex;
    flex-flow: row;
}

.EA-body-editor {
    flex: 1 1 auto;
    padding: 20px;
}

.EA-body-sidebar {
    flex: 0 1 auto;
    width: 150px;
    /*margin: 10px;*/
    background-color: white;
    margin: 20px 20px 20px 0;
    border-radius: 3px;
    border: solid 1px #aaa;
}

.EA-body-sidebar-you {
    margin: 16px 16px 16px 15%;
    text-align: left;
    float: left;
}

.EA-body-sidebar-separator {
    clear: both;
    width: 80%;
    height: 1px;
    border: 0;
    background: lightgray;
}

.EA-body-sidebar-item {
    margin-top: 16px;
    margin-left: 15%;
    overflow: auto;
}

.EA-body-sidebar-item-text {
    float: left;
    margin: 0 0 0 5px;
}

.EA-body-sidebar-item-colorstrip {
    float: left;
    width: 2px;
    height: 16px;
    margin-top: 4px;
}

